all views added

--- a/index.html
+++ b/index.html
@@ -24,6 +24,24 @@
     <a href="javascript:void(0)" class="scene" data-id="jeronimos">
       <li class="text">Pre Function Area 2</li>
     </a>
+    <a href="javascript:void(0)" class="scene" data-id="preFunctionArea3">
+      <li class="text">Pre Function Area 3</li>
+    </a>
+    <a href="javascript:void(0)" class="scene" data-id="preFunctionArea4">
+      <li class="text">Pre Function Area 4</li>
+    </a>
+    <a href="javascript:void(0)" class="scene" data-id="centerView">
+      <li class="text">Center View</li>
+    </a>
+    <a href="javascript:void(0)" class="scene" data-id="stageView">
+      <li class="text">Stage View</li>
+    </a>
+    <a href="javascript:void(0)" class="scene" data-id="backView">
+      <li class="text">Back View</li>
+    </a>
+    <a href="javascript:void(0)" class="scene" data-id="blankView">
+      <li class="text">Blank View</li>
+    </a>
   </ul>
 </div>
 
