new images added, views updated

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Sample Tour | Marzipano</title>
+<title>Four Seasons 3D Viewer | Jio Creative Labs</title>
 <meta name="description" content="A sample 360° tour created by the Marzipano Tool." />
 <meta charset="utf-8">
 <meta name="viewport" content="target-densitydpi=device-dpi, width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, minimal-ui" />
@@ -41,6 +41,9 @@
     </a>
     <a href="javascript:void(0)" class="scene" data-id="blankView">
       <li class="text">Blank View</li>
+    </a>
+    <a href="javascript:void(0)" class="scene" data-id="weddingView">
+      <li class="text">Wedding View</li>
     </a>
   </ul>
 </div>
@@ -92,3 +95,4 @@
 
 </body>
 </html>
+
