dimesniosn images added

--- a/index.html
+++ b/index.html
@@ -45,6 +45,15 @@
     <a href="javascript:void(0)" class="scene" data-id="weddingView">
       <li class="text">Wedding View</li>
     </a>
+    <a href="javascript:void(0)" class="scene" data-id="corporateDimensionsView">
+      <li class="text">Corporate Dimensions View</li>
+    </a>
+    <a href="javascript:void(0)" class="scene" data-id="dimEntryView">
+      <li class="text">Entry Dimensions View</li>
+    </a>
+    <a href="javascript:void(0)" class="scene" data-id="dimPreView">
+      <li class="text">Pre Entry Dimensions View</li>
+    </a>
   </ul>
 </div>
 
