fixed and enableled autorotate

--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
     <a href="javascript:void(0)" class="scene" data-id="backView">
       <li class="text">Back View</li>
     </a>
-    <a href="javascript:void(0)" class="scene" data-id="blankView">
-      <li class="text">Blank View</li>
-    </a>
     <a href="javascript:void(0)" class="scene" data-id="weddingView">
       <li class="text">Wedding View</li>
+    </a>
+    <a href="javascript:void(0)" class="scene" data-id="blankView">
+      <li class="text">Blank View</li>
     </a>
     <a href="javascript:void(0)" class="scene" data-id="corporateDimensionsView">
       <li class="text">Corporate Dimensions View</li>
@@ -51,7 +51,7 @@
     <a href="javascript:void(0)" class="scene" data-id="dimEntryView">
       <li class="text">Entry Dimensions View</li>
     </a>
-    <a href="javascript:void(0)" class="scene" data-id="dimPreView">
+    <a href="javascript:void(0)" class="scene d-none" data-id="dimPreView">
       <li class="text">Pre Entry Dimensions View</li>
     </a>
   </ul>
