image name repaired

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <ul class="scenes">
         <!-- Main Venue Scenes -->
         <a href="javascript:void(0)" class="scene" data-id="oriente-station">
-          <li class="text">Entry Scene</li>
+          <li class="text">Entry</li>
         </a>
         <a href="javascript:void(0)" class="scene" data-id="electricity-museum">
           <li class="text">Pre Function Area 1</li>
